--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
 	"type": "module",
 	"dependencies": {
 		"axios": "^1.6.0",
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
 		"monaco-editor": "^0.44.0",
 		"svelte-svg": "^0.0.7"
 	}
